# gmock_project_demo

./: CMakeLists.txt  README.md  TestMock.cpp  main.cpp
